# auto-trading-bot

./: .gitignore  README.md  ai_trader.py  analyze_rss.py  config.yaml  debug_alpaca.py  debug_stream.py  debug_telegram.py  deploy.py  get_updates.py  main.py  optimization_results.csv  pyproject.toml  report.py  requirements.txt  run.bat  run.py  run.sh  run_bot.bat  run_cio_bot.bat  run_crypto.bat  simple_rss.py  start_bot.bat  test_ai_logic.py  validate_keys.py
archive/src/: backtest.py  check_env.py  data.py  main.py  portfolio.py  scanner.py  strategy_logic.py
backtest_results/: equity.csv  trades.csv
cache/: analysis_cache.json
config/: crypto.yaml  lessons_learned.txt
logs_rl/A2C_1/: events.out.tfevents.1768643027.ShovalsSPECTRE.43688.1
logs_rl/A2C_2/: events.out.tfevents.1768646815.ShovalsSPECTRE.24012.1
scripts/: check_time.py  compare_strategies.py  emergency_stop.py  monitor_dual_bots.py  optimize.py  run_backtest.py  stress_test.py  test_monitor.py  test_news.py  train_crypto.py  train_ensemble.py  verify_loop.py
src/: ai_brain.py  analysis_cache.py  backtest.py  check_portfolio.py  dashboard.py  enhanced_strategy.py  features.py  indicators.py  learning_engine.py  live_trading.py  logger.py  main.py  market_data.py  market_scanner.py  monitor.py  news_brain.py  news_scout.py  optimize.py  rate_limiter.py  risk_manager.py  scanner.py  strategy.py  strategy_logic.py  telegram_bot.py  test_execution.py
tests/: test_data.py  test_e2e.py  test_indicators.py  test_learning_engine.py  test_news_gating.py  test_risk_manager.py  test_risk_manager_multiplier.py  test_strategy.py
(+22 files in other folders)
