[project]
name = "auto-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "alpaca-backtrader-api>=0.8.0",
    "alpaca-py>=0.43.2",
    "alpaca-trade-api>=0.48",
    "alpha-vantage<3.0.0",
    "backtrader>=1.9.78.123",
    "feedparser>=6.0.12",
    "google-genai>=1.57.0",
    "google-generativeai>=0.8.6",
    "ipython>=9.9.0",
    "langchain>=1.2.3",
    "lumibot>=1.5.5",
    "matplotlib>=3.10.0",
    "numpy>=1.23,<2.0",
    "openai>=2.14.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.1",
    "yfinance>=0.2.40",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "scikit-learn>=1.3.0",
    "shimmy>=1.0.0",
    "pandas-ta>=0.3.14b",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]
